--- a/templates/index.html
+++ b/templates/index.html
@@ -1,221 +1,140 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <title>스파르타 피디아</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
     <style>
-        * {
-            font-family: 'Gowun Dodum', sans-serif;
+        *{
+            box-sizing: border-box;
         }
-
-        .mytitle {
-            width: 100%;
-            height: 250px;
-
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
-            background-position: center;
-            background-size: cover;
-
-            color: white;
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .mytitle>button {
-            width: 200px;
+        .main{
             height: 50px;
-
-            background-color: transparent;
-            color: white;
-
-            border-radius: 50px;
-            border: 1px solid white;
-
-            margin-top: 10px;
+            margin: 50px;
+            /* background-color: green; */
         }
-
-        .mytitle>button:hover {
-            border: 2px solid white;
+        .mainBtns{
+            margin: 10px;
+            float: right;
+            padding-left: 50px;
         }
-
-        .mycomment {
-            color: gray;
+        .mainLogo{
+            /* background-color: beige; */
+            height: 100px;
+            background-image: url(IMG_7217.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            margin: 50px;
         }
+        .search{
+            background-color: aqua;
 
-        .mycards {
-            margin: 20px auto 0px auto;
-            width: 95%;
-            max-width: 1200px;
         }
-
-        .mypost {
-            width: 95%;
-            max-width: 500px;
-            margin: 20px auto 0px auto;
-            padding: 20px;
-            box-shadow: 0px 0px 3px 0px gray;
-
-            display: none;
+        .cards{
+            margin: 50px;
         }
-
-        .mybtns {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-
-            margin-top: 20px;
-        }
-
-        .mybtns>button {
-            margin-right: 10px;
+        .card > img{
+            object-fit: cover;
         }
     </style>
-    <script>
-        $(document).ready(function () {
-            listing();
-        });
-
-        function listing() {
-            fetch('/movie').then((res) => res.json()).then((data) => {
-                let rows = data['result']
-                $('#cards-box').empty()
-                rows.forEach((a) => {
-                    let comment = a['comment']
-                    let title = a['title']
-                    let desc = a['desc']
-                    let image = a['image']
-                    let star = a['star']
-
-                    let star_repeat = '⭐'.repeat(star)
-
-                    let temp_html = `<div class="col">
-                                        <div class="card h-100">
-                                            <img src="${image}"
-                                                class="card-img-top">
-                                            <div class="card-body">
-                                                <h5 class="card-title">${title}</h5>
-                                                <p class="card-text">${desc}</p>
-                                                <p>${star_repeat}</p>
-                                                <p class="mycomment">${comment}</p>
-                                            </div>
-                                        </div>
-                                    </div>`
-                    $('#cards-box').append(temp_html)
-                })
-            })
-        }
-
-        function posting() {
-            let url = $('#url').val()
-            let comment = $('#comment').val()
-
-            let formData = new FormData();
-            formData.append("url_give", url);
-            formData.append("star_give", star['value']);
-            formData.append("comment_give", comment);
-
-            fetch('/movie', { method: "POST", body: formData }).then((res) => res.json()).then((data) => {
-                alert(data['msg'])
-                window.location.reload()
-            })
-        }
-
-        function open_box() {
-            $('#post-box').show()
-        }
-        function close_box() {
-            $('#post-box').hide()
-        }
-    </script>
 </head>
-
 <body>
-    <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
-        <button onclick="open_box()">영화 기록하기</button>
+<div class="main">
+    <div class="mainBtns">
+        <button type="button" class="btn btn-outline-primary" style="border:none;">Sign in</button>
+        <button type="button" class="btn btn-primary">Sign Up</button>
     </div>
-    <div class="mypost" id="post-box">
-        <div class="form-floating mb-3">
-            <input id="url" type="email" class="form-control" placeholder="name@example.com">
-            <label>영화URL</label>
-        </div>
-        <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupSelect01">별점</label>
-            <select class="form-select" id="star">
-                <option selected>-- 선택하기 --</option>
-                <option value="1">⭐</option>
-                <option value="2">⭐⭐</option>
-                <option value="3">⭐⭐⭐</option>
-                <option value="4">⭐⭐⭐⭐</option>
-                <option value="5">⭐⭐⭐⭐⭐</option>
-            </select>
-        </div>
-        <div class="form-floating">
-            <textarea id="comment" class="form-control" placeholder="Leave a comment here"></textarea>
-            <label for="floatingTextarea2">코멘트</label>
-        </div>
-        <div class="mybtns">
-            <button onclick="posting()" type="button" class="btn btn-dark">기록하기</button>
-            <button onclick="close_box()" type="button" class="btn btn-outline-dark">닫기</button>
-        </div>
-    </div>
-    <div class="mycards">
-        <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div> 
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+</div>
+<div class="mainLogo">
 
+</div>
+<div class="serch">
+    <div class="row">
+        <div class="col" style="margin:50px">
+            <input type="text" class="form-control" placeholder="Search name">
+        </div>
+    </div>
+</div>
+<div class="cards">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card">
+                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">이름</h5>
+                    <p class="card-text">기수 : 14기</p>
+                    <p class="card-text">직무 : Spring백엔드 개발자</p>
+                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
+                    <p class="card-text">MBTI : ISFJ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">이름</h5>
+                    <p class="card-text">기수 : 14기</p>
+                    <p class="card-text">직무 : Spring백엔드 개발자</p>
+                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
+                    <p class="card-text">MBTI : ISFJ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">이름</h5>
+                    <p class="card-text">기수 : 14기</p>
+                    <p class="card-text">직무 : Spring백엔드 개발자</p>
+                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
+                    <p class="card-text">MBTI : ISFJ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">이름</h5>
+                    <p class="card-text">기수 : 14기</p>
+                    <p class="card-text">직무 : Spring백엔드 개발자</p>
+                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
+                    <p class="card-text">MBTI : ISFJ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">이름</h5>
+                    <p class="card-text">기수 : 14기</p>
+                    <p class="card-text">직무 : Spring백엔드 개발자</p>
+                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
+                    <p class="card-text">MBTI : ISFJ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">이름</h5>
+                    <p class="card-text">기수 : 14기</p>
+                    <p class="card-text">직무 : Spring백엔드 개발자</p>
+                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
+                    <p class="card-text">MBTI : ISFJ</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
