--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         .mainLogo{
             /* background-color: beige; */
             height: 100px;
-            background-image: url(IMG_7217.png);
+            background-image: url(/static/images/IMG_7217.png);
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
@@ -64,7 +64,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card">
-                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">이름</h5>
                     <p class="card-text">기수 : 14기</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">이름</h5>
                     <p class="card-text">기수 : 14기</p>
@@ -88,7 +88,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">이름</h5>
                     <p class="card-text">기수 : 14기</p>
@@ -100,7 +100,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">이름</h5>
                     <p class="card-text">기수 : 14기</p>
@@ -112,7 +112,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">이름</h5>
                     <p class="card-text">기수 : 14기</p>
@@ -124,7 +124,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="467704_392166_1110.jpg" class="card-img-top" alt="...">
+                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">이름</h5>
                     <p class="card-text">기수 : 14기</p>
