--- a/templates/signup.html
+++ b/templates/signup.html
@@ -33,7 +33,7 @@
         .mainLogo {
             /* background-color: beige; */
             height: 100px;
-            background-image: url(IMG_7217.png);
+            background-image: url(/static/images/IMG_7217.png);
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
