--- a/templates/signin.html
+++ b/templates/signin.html
@@ -101,7 +101,7 @@
         </div>
         <div class="row">
             <div class="col" style="margin:25px 50px 10px 50px">
-                <button type="button" class="btn btn-dark" style="width: 100%;">로그인 하기</button>
+                <button type="button" class="btn btn-dark" style="width: 100%;" onclick="login()">로그인 하기</button>
             </div>
         </div>
     </div>
