signin, signup link
Co-authored-by: seokscribe <registaPark@users.noreply.github.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,12 +42,15 @@
             object-fit: cover;
         }
     </style>
+    <script>
+
+    </script>
 </head>
 <body>
 <div class="main">
     <div class="mainBtns">
-        <button type="button" class="btn btn-outline-primary" style="border:none;">Sign in</button>
-        <button type="button" class="btn btn-primary">Sign Up</button>
+        <button type="button" class="btn btn-outline-primary" onClick="location.href='signin'" style="border:none;">Sign in</button>
+        <button type="button" class="btn btn-primary" onClick="location.href='signup'">Sign Up</button>
     </div>
 </div>
 <div class="mainLogo">
