--- a/templates/signup.html
+++ b/templates/signup.html
@@ -47,7 +47,7 @@
         function join() {
             $.ajax({
                 type: "POST",
-                url: "/join",
+                url: "/signup",
                 data: {
                     id_give: $('#userid').val(),
                     pw_give: $('#userpw').val()
