--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,233 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
     <style>
-        * {
-            box-sizing: border-box;
-        }
-        .header{
-            /* background-color: beige; */
-        }
-        .header > img{
-            max-width: 300px;
-            margin: 20px 20px 20px 20px;
-        }
-        .btn{
-            /* background-color: blueviolet; */
-            text-align: right;
-        }
-        .btn > button{
-            margin: 20px 20px 20px 0px;
-        }
-        .left{
-            background-color: beige;
-            /* padding: 0px 20px 0px 20px; */
-            /* border: 1px solid black; */
-        }
-        .right{
-            background-color: blueviolet;
-            border: 1px solid black;
-            height: 1000px;
-        }
-        .imgbox{
-            background-color: blanchedalmond;
-            height: 300px;
-            width: 300px;
-            
-        }
-        /* .innerRow{
+      * {
+        box-sizing: border-box;
+      }
+      .header {
+        /* background-color: beige; */
+      }
+      .header > img {
+        max-width: 300px;
+        margin: 20px 20px 20px 20px;
+      }
+      .btn {
+        /* background-color: blueviolet; */
+        text-align: right;
+      }
+      .btn > button {
+        margin: 20px 20px 20px 0px;
+      }
+      .left {
+        background-color: beige;
+        /* padding: 0px 20px 0px 20px; */
+        /* border: 1px solid black; */
+      }
+      .right {
+        background-color: blueviolet;
+        border: 1px solid black;
+        height: 1000px;
+      }
+      .imgbox {
+        background-color: blanchedalmond;
+        height: 300px;
+        width: 300px;
+      }
+      /* .innerRow{
             text-align: center;
         } */
-        .inner{
-            border: 1px solid black;
-            width: 80%;
-            height: 450px;
-            margin-left: 30px;
-            margin: 0 auto;
-        }
-        #container{
-            /* border: 1px solid black; */
-            margin-left: 30px;
-            margin-right: 30px;
-        }
-        .profileImg{
-            border: 1px solid black;
-            width: 300px;
-            height: 300px;
-            margin: 0 auto;
-            margin-top: 40px;
-        }
-        .profileImg > img{
-            width: 100%;
-            height: 100%;
-            object-fit: corver;
-            overflow: hidden;
-        }
-        .profile{
-            border: 1px solid black;
-            width: 100%;
-            height: 300px;
-            margin: 0 auto;
-            margin-top: 40px;
-        }
-        .detailProfile{
-            margin-top: 50px;
-        }
-        .addImgBtn{
-            text-align: center;
-        }
-        .addImgBtn > button{
-            width: 300px;
-            margin-top: 20px;
-        }
-        .addProfileBtn {
-            margin-top: 20px;
-        }
-        .editBtn{
-            margin-top: 20px;
-            text-align: right;
-        }
-        .visitBtn{
-            text-align: right;
-            width: 80%;
-            background-color: yellowgreen;
-            margin: 0 auto;
-        }
-        .visitBtn > button{
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        /* .commentRow{
+      .inner {
+        border: 1px solid black;
+        width: 80%;
+        height: 450px;
+        margin-left: 30px;
+        margin: 0 auto;
+      }
+      #container {
+        /* border: 1px solid black; */
+        margin-left: 30px;
+        margin-right: 30px;
+      }
+      .profileImg {
+        border: 1px solid black;
+        width: 300px;
+        height: 300px;
+        margin: 0 auto;
+        margin-top: 40px;
+      }
+      .profileImg > img {
+        width: 100%;
+        height: 100%;
+        object-fit: corver;
+        overflow: hidden;
+      }
+      .profile {
+        border: 1px solid black;
+        width: 100%;
+        height: 300px;
+        margin: 0 auto;
+        margin-top: 40px;
+      }
+      .detailProfile {
+        margin-top: 50px;
+      }
+      .addImgBtn {
+        text-align: center;
+      }
+      .addImgBtn > button {
+        width: 300px;
+        margin-top: 20px;
+      }
+      .addProfileBtn {
+        margin-top: 20px;
+      }
+      .editBtn {
+        margin-top: 20px;
+        text-align: right;
+      }
+      .visitBtn {
+        text-align: right;
+        width: 80%;
+        background-color: yellowgreen;
+        margin: 0 auto;
+      }
+      .visitBtn > button {
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
+      /* .commentRow{
             width: 80%;
             margin: 0 auto;
         } */
-        .comment{
-            border: 1px solid black;
-            width: 80%;
-            margin: 0 auto;
-            background-color: violet;
-        }
+      .comment {
+        border: 1px solid black;
+        width: 80%;
+        margin: 0 auto;
+        background-color: violet;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="row">
-        <div class="col-6 header">
-            <img src="/static/images/IMG_7217.png">
-        </div>
-        <div class="col-6 btn">
-            <button type="button" class="btn btn-primary">회원가입</button>
-            <button type="button" class="btn btn-primary">로그인</button>
-        </div>
+      <div class="col-6 header">
+        <img src="/static/images/IMG_7217.png" />
+      </div>
+      <div class="col-6 btn">
+        <button type="button" class="btn btn-primary">회원가입</button>
+        <button type="button" class="btn btn-primary">로그인</button>
+      </div>
     </div>
     <div class="row" id="container">
-        <div class="col-12 col-xl-10 left">
-            <div class="row innerRow">
-                <div class="col-12 inner">
-                    <div class="row">
-                        <div class="col-xxl-4 col-12">
-                            <div class-="row">
-                                <div class="col-12 profileImg">
-                                    <img src="/static/images/467704_392166_1110.jpg">
-                                </div>
-                                <div class="col-12 addImgBtn">
-                                    <button type="button" class="btn btn-primary" style="text-align: center;">이미지 업로드</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xxl-8 col-12">
-                            <div class-="row">
-                                <div class="col-12 profile">
-                                    <div class="row detailProfile">
-                                        <div class="col-2" style="text-align: right;">
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                name |
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                field |
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                github |
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                blog |
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                mbti |
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                한 줄 소개 |
-                                            </div>
-                                        </div>
-                                        <div class="col-10">
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                get name
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                get field
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                get github
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                get blog
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                get mbit
-                                            </div>
-                                            <div class="col-12" style="margin-top: 5px;">
-                                                한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-6 addProfileBtn">
-                                        <button type="button" class="btn btn-primary" style="text-align: center;">인스타그램</button>
-                                        <button type="button" class="btn btn-primary" style="text-align: center;">페이스북</button>
-                                    </div>
-                                    <div class="col-6 editBtn">
-                                        <button type="button" class="btn btn-primary" style="text-align: center;">등록 / 수정하기</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="col-12 col-xl-10 left">
+        <div class="row innerRow">
+          <div class="col-12 inner">
             <div class="row">
-                <div class="col-12 visitBtn">
-                    <button type="button" class="btn btn-primary" style="text-align: center;">방명록 작성하기</button>
+              <div class="col-xxl-4 col-12">
+                <div class-="row">
+                  <div class="col-12 profileImg">
+                    <img src="/static/images/467704_392166_1110.jpg" />
+                  </div>
+                  <div class="col-12 addImgBtn">
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      style="text-align: center"
+                    >
+                      이미지 업로드
+                    </button>
+                  </div>
                 </div>
-            </div>
-            <div class="row commentRow">
-                <div class="col-12 comment">
-                    <div class="row">
-                        <div class="col-4">
-                            a
+              </div>
+              <div class="col-xxl-8 col-12">
+                <div class-="row">
+                  <div class="col-12 profile">
+                    <div class="row detailProfile">
+                      <div class="col-2" style="text-align: right">
+                        <div class="col-12" style="margin-top: 5px">name |</div>
+                        <div class="col-12" style="margin-top: 5px">
+                          field |
                         </div>
-                        <div class="col-8">
-                            b
+                        <div class="col-12" style="margin-top: 5px">
+                          github |
                         </div>
+                        <div class="col-12" style="margin-top: 5px">blog |</div>
+                        <div class="col-12" style="margin-top: 5px">mbti |</div>
+                        <div class="col-12" style="margin-top: 5px">
+                          한 줄 소개 |
+                        </div>
+                      </div>
+                      <div class="col-10">
+                        <div class="col-12" style="margin-top: 5px">
+                          get name
+                        </div>
+                        <div class="col-12" style="margin-top: 5px">
+                          get field
+                        </div>
+                        <div class="col-12" style="margin-top: 5px">
+                          get github
+                        </div>
+                        <div class="col-12" style="margin-top: 5px">
+                          get blog
+                        </div>
+                        <div class="col-12" style="margin-top: 5px">
+                          get mbit
+                        </div>
+                        <div class="col-12" style="margin-top: 5px">
+                          한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개
+                          한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개 한 줄 소개
+                        </div>
+                      </div>
                     </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6 addProfileBtn">
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        style="text-align: center"
+                      >
+                        인스타그램
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        style="text-align: center"
+                      >
+                        페이스북
+                      </button>
+                    </div>
+                    <div class="col-6 editBtn">
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        style="text-align: center"
+                      >
+                        등록 / 수정하기
+                      </button>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="col-2 d-none d-xl-block right">
-            b
+        <div class="row">
+          <div class="col-12 visitBtn">
+            <button
+              type="button"
+              class="btn btn-primary"
+              style="text-align: center"
+            >
+              방명록 작성하기
+            </button>
+          </div>
         </div>
+        <div class="row commentRow">
+          <div class="col-12 comment">
+            <div class="row">
+              <div class="col-4">a</div>
+              <div class="col-8">b</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-2 d-none d-xl-block right">b</div>
     </div>
-</body>
-
+  </body>
 </html>
