--- a/templates/index.html
+++ b/templates/index.html
@@ -1,143 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
     <style>
-        *{
-            box-sizing: border-box;
-        }
-        .main{
-            height: 50px;
-            margin: 50px;
-            /* background-color: green; */
-        }
-        .mainBtns{
-            margin: 10px;
-            float: right;
-            padding-left: 50px;
-        }
-        .mainLogo{
-            /* background-color: beige; */
-            height: 100px;
-            background-image: url(/static/images/IMG_7217.png);
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-            margin: 50px;
-        }
-        .search{
-            background-color: aqua;
-
-        }
-        .cards{
-            margin: 50px;
-        }
-        .card > img{
-            object-fit: cover;
-        }
+      * {
+        box-sizing: border-box;
+      }
+      .main {
+        height: 50px;
+        margin: 50px;
+        /* background-color: green; */
+      }
+      .mainBtns {
+        margin: 10px;
+        float: right;
+        padding-left: 50px;
+      }
+      .mainLogo {
+        /* background-color: beige; */
+        height: 100px;
+        background-image: url(/static/images/IMG_7217.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        margin: 50px;
+      }
+      .search {
+        background-color: aqua;
+      }
+      .cards {
+        margin: 50px;
+      }
+      .card > img {
+        object-fit: cover;
+      }
     </style>
-    <script>
-
-    </script>
-</head>
-<body>
-<div class="main">
-    <div class="mainBtns">
-        <button type="button" class="btn btn-outline-primary" onClick="location.href='signin'" style="border:none;">Sign in</button>
-        <button type="button" class="btn btn-primary" onClick="location.href='signup'">Sign Up</button>
+    <script></script>
+  </head>
+  <body>
+    <div class="main">
+      <div class="mainBtns">
+        <button
+          type="button"
+          class="btn btn-outline-primary"
+          onClick="location.href='signin'"
+          style="border: none"
+        >
+          Sign in
+        </button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          onClick="location.href='signup'"
+        >
+          Sign Up
+        </button>
+      </div>
     </div>
-</div>
-<div class="mainLogo">
-
-</div>
-<div class="serch">
-    <div class="row">
-        <div class="col" style="margin:50px">
-            <input type="text" class="form-control" placeholder="Search name">
+    <div class="mainLogo"></div>
+    <div class="serch">
+      <div class="row">
+        <div class="col" style="margin: 50px">
+          <input type="text" class="form-control" placeholder="Search name" />
         </div>
+      </div>
     </div>
-</div>
-<div class="cards">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="cards">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-            <div class="card">
-                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">이름</h5>
-                    <p class="card-text">기수 : 14기</p>
-                    <p class="card-text">직무 : Spring백엔드 개발자</p>
-                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
-                    <p class="card-text">MBTI : ISFJ</p>
-                </div>
+          <div class="card">
+            <img
+              src="/static/images/467704_392166_1110.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">이름</h5>
+              <p class="card-text">기수 : 14기</p>
+              <p class="card-text">직무 : Spring백엔드 개발자</p>
+              <p class="card-text">블로그 : Spring백엔드 개발자</p>
+              <p class="card-text">MBTI : ISFJ</p>
             </div>
+          </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">이름</h5>
-                    <p class="card-text">기수 : 14기</p>
-                    <p class="card-text">직무 : Spring백엔드 개발자</p>
-                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
-                    <p class="card-text">MBTI : ISFJ</p>
-                </div>
+          <div class="card">
+            <img
+              src="/static/images/467704_392166_1110.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">이름</h5>
+              <p class="card-text">기수 : 14기</p>
+              <p class="card-text">직무 : Spring백엔드 개발자</p>
+              <p class="card-text">블로그 : Spring백엔드 개발자</p>
+              <p class="card-text">MBTI : ISFJ</p>
             </div>
+          </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">이름</h5>
-                    <p class="card-text">기수 : 14기</p>
-                    <p class="card-text">직무 : Spring백엔드 개발자</p>
-                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
-                    <p class="card-text">MBTI : ISFJ</p>
-                </div>
+          <div class="card">
+            <img
+              src="/static/images/467704_392166_1110.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">이름</h5>
+              <p class="card-text">기수 : 14기</p>
+              <p class="card-text">직무 : Spring백엔드 개발자</p>
+              <p class="card-text">블로그 : Spring백엔드 개발자</p>
+              <p class="card-text">MBTI : ISFJ</p>
             </div>
+          </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">이름</h5>
-                    <p class="card-text">기수 : 14기</p>
-                    <p class="card-text">직무 : Spring백엔드 개발자</p>
-                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
-                    <p class="card-text">MBTI : ISFJ</p>
-                </div>
+          <div class="card">
+            <img
+              src="/static/images/467704_392166_1110.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">이름</h5>
+              <p class="card-text">기수 : 14기</p>
+              <p class="card-text">직무 : Spring백엔드 개발자</p>
+              <p class="card-text">블로그 : Spring백엔드 개발자</p>
+              <p class="card-text">MBTI : ISFJ</p>
             </div>
+          </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">이름</h5>
-                    <p class="card-text">기수 : 14기</p>
-                    <p class="card-text">직무 : Spring백엔드 개발자</p>
-                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
-                    <p class="card-text">MBTI : ISFJ</p>
-                </div>
+          <div class="card">
+            <img
+              src="/static/images/467704_392166_1110.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">이름</h5>
+              <p class="card-text">기수 : 14기</p>
+              <p class="card-text">직무 : Spring백엔드 개발자</p>
+              <p class="card-text">블로그 : Spring백엔드 개발자</p>
+              <p class="card-text">MBTI : ISFJ</p>
             </div>
+          </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">이름</h5>
-                    <p class="card-text">기수 : 14기</p>
-                    <p class="card-text">직무 : Spring백엔드 개발자</p>
-                    <p class="card-text">블로그 : Spring백엔드 개발자</p>
-                    <p class="card-text">MBTI : ISFJ</p>
-                </div>
+          <div class="card">
+            <img
+              src="/static/images/467704_392166_1110.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">이름</h5>
+              <p class="card-text">기수 : 14기</p>
+              <p class="card-text">직무 : Spring백엔드 개발자</p>
+              <p class="card-text">블로그 : Spring백엔드 개발자</p>
+              <p class="card-text">MBTI : ISFJ</p>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
