--- a/templates/register.html
+++ b/templates/register.html
@@ -1,106 +1,135 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>프로필 등록하기</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="icon" href="/static/images/favicon.png">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-    crossorigin="anonymous"></script>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      display: block;
-    }
-    .main {
-      height: 50px;
-      margin: 50px;
-      /* background-color: green; */
-    }
-   
-    .profile {
-      /* background-color: bisque; */
-      justify-content: center;
-      align-items: center;
-    }
-    .profile>.profile_body {
-      /* background-color: palevioletred;       */
-      align-items: center;
-    }
-    .upload_photo {
-      /* background-color: red; */
-      text-align: center;
-      margin:100px;
-    }
-    .form {
-      /* background-color: skyblue; */
-      align-items: center;
-      justify-content: center;
-    }
-  .upload_photo > .card-img-top{
-    width: 200px;
-    height: 200px;
-  }
-  </style>
-</head>
-<body>
-  <div class="main">
-    <div class="mainBtns">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>프로필 등록하기</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" href="/static/images/favicon.png" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        display: block;
+      }
+      .main {
+        height: 50px;
+        margin: 50px;
+        /* background-color: green; */
+      }
+
+      .profile {
+        /* background-color: bisque; */
+        justify-content: center;
+        align-items: center;
+      }
+      .profile > .profile_body {
+        /* background-color: palevioletred;       */
+        align-items: center;
+      }
+      .upload_photo {
+        /* background-color: red; */
+        text-align: center;
+        margin: 100px;
+      }
+      .form {
+        /* background-color: skyblue; */
+        align-items: center;
+        justify-content: center;
+      }
+      .upload_photo > .card-img-top {
+        width: 200px;
+        height: 200px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="main">
+      <div class="mainBtns"></div>
     </div>
-  </div>
-  <div class="mainLogo">
-  </div>
-  <div class="title">
-    <div class="row">
-      <div class="col" style="margin:50px">
-        <a href="/templates/index.html"><img src="/static/images/IMG_2914.png" alt="홈으로가기" width="50"></a>
+    <div class="mainLogo"></div>
+    <div class="title">
+      <div class="row">
+        <div class="col" style="margin: 50px">
+          <a href="/templates/index.html"
+            ><img src="/static/images/IMG_2914.png" alt="홈으로가기" width="50"
+          /></a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="profile">
-    <div class="profile_body row">
-    <div class="col-6">
-      
-          
-      <form class="upload_photo">
-        <img id="preview" class="card-img-top" src="#" alt="미리보기"><br><br>
-        <label for="formFile" class="form-label">업로드 할 사진을 선택하세요.</label>
-        <input class="form-control" type="file" id="formFile"  name="image" onchange="previewImage(event)"><br>
-        
-      </form>
-    </div>
-    <script>
-      function previewImage(event) {
-        var preview = document.getElementById('preview');
-        preview.src = URL.createObjectURL(event.target.files[0]);
-      }
-    </script>
-      <div class="form row col-6">
-        <form class="row g-3">
+    <div class="profile">
+      <div class="profile_body row">
+        <div class="col-6">
+          <form class="upload_photo">
+            <img
+              id="preview"
+              class="card-img-top"
+              src="#"
+              alt="미리보기"
+            /><br /><br />
+            <label for="formFile" class="form-label"
+              >업로드 할 사진을 선택하세요.</label
+            >
+            <input
+              class="form-control"
+              type="file"
+              id="formFile"
+              name="image"
+              onchange="previewImage(event)"
+            /><br />
+          </form>
+        </div>
+        <script>
+          function previewImage(event) {
+            var preview = document.getElementById("preview");
+            preview.src = URL.createObjectURL(event.target.files[0]);
+          }
+        </script>
+        <div class="form row col-6">
+          <form class="row g-3">
             <legend>프로필 등록하기</legend>
             <div class="col-12">
               <label for="inputEmail4" class="form-label">name</label>
-              <input type="text" class="form-control" id="inputEmail4">
+              <input type="text" class="form-control" id="inputEmail4" />
             </div>
             <div class="col-12">
               <label for="inputPassword4" class="form-label">field</label>
-              <input type="text" class="form-control" id="inputPassword4">
+              <input type="text" class="form-control" id="inputPassword4" />
             </div>
             <div class="col-12">
               <label for="inputAddress" class="form-label">github</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="github.com">
+              <input
+                type="text"
+                class="form-control"
+                id="inputAddress"
+                placeholder="github.com"
+              />
             </div>
             <div class="col-12">
               <label for="inputAddress2" class="form-label">blog</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="blog.com">
+              <input
+                type="text"
+                class="form-control"
+                id="inputAddress2"
+                placeholder="blog.com"
+              />
             </div>
             <div class="col-md-4">
               <label for="inputState" class="form-label">MBTI</label>
@@ -125,15 +154,21 @@
               </select>
             </div>
             <div class="col-12">
-              <label for="exampleFormControlTextarea1" class="form-label">자기소개</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >자기소개</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+              ></textarea>
             </div>
             <div class="col-12">
               <button type="submit" class="btn btn-primary">등록</button>
             </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
