유저 정보 확인 API 테스트: 현재 갖고 있는 토큰의 payload를 확인한다

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,18 @@
         object-fit: cover;
       }
     </style>
-    <script></script>
+    <script>
+      $(document).ready(function () {
+        valid();
+      });
+      function valid() {
+        fetch("/valid")
+          .then((res) => res.json())
+          .then((data) => {
+            console.log(data);
+          });
+      }
+    </script>
   </head>
   <body>
     <div class="main">
