payload 값 가져오기, 콘솔로그로 확인

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,13 +56,15 @@
     </style>
     <script>
       $(document).ready(function () {
-        valid();
+        valid().then((response) => {
+            console.log(response)
+        });
       });
       function valid() {
-        fetch("/valid")
+        return fetch("/valid")
           .then((res) => res.json())
           .then((data) => {
-            console.log(data);
+            return data;
           });
       }
     </script>
