test img add, detail html edit

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -13,7 +13,11 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.js"
         integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        body{
+            background-color: rgb(238, 240, 243);
+        }
         * {
             box-sizing: border-box;
         }
@@ -46,7 +50,7 @@
             width: 100%;
         }
         .nameArea{  /* 메인 프로필 이름 관련 css */
-            border: 1px solid black;
+            /* border: 1px solid black; */
             font-size: 60px;
             text-align: center;
         }
@@ -98,18 +102,18 @@
             <img src="/static/images/IMG_7217.png">
         </div>
         <div class="col-6 btn">
+            <button type="button" class="btn btn-outline-primary" style="border: none;">로그인</button>
             <button type="button" class="btn btn-primary">회원가입</button>
-            <button type="button" class="btn btn-primary">로그인</button>
         </div>
     </div>  <!-- 최상단 로고, 회원관련 영역 끝-->
     <div class="row main">  <!-- 본인 이미지, 이름 영역 시작-->
         <div class="col-12">
             <div class="row">
                 <div class="col-12 imageArea">
-                    <img src="/static/images/467704_392166_1110.jpg">
+                    <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png">
                 </div>
                 <div class="col-12 nameArea">
-                    <p>조양기</p>
+                    <p>이름은 여기로 불러주시면 됩니다.</p>
                 </div>
             </div>
         </div>
@@ -124,22 +128,22 @@
     </div>  <!-- 편집버튼 영역 끝-->
     <div class="row main3"> <!-- 본인 프로필 영역 시작 -->
         <div class="col-12">
-            <p>field</p>
+            <p><i class="fa-solid fa-laptop-code"></i>필드 정보는 여기로 불러주시면 됩니다.</p>
         </div>
         <div class="col-12">
-            <p>github</p>
+            <p><i class="fa-brands fa-github"></i>깃허브 정보는 여기로 불러주시면 됩니다.</p>
         </div>
         <div class="col-12">
-            <p>blog</p>
+            <p><i class="fa-brands fa-chrome"></i>블로그 정보는 여기로 불러주시면 됩니다.</p>
         </div>
         <div class="col-12">
-            <p>mbti</p>
+            <p><i class="fa-regular fa-newspaper"></i>mbti 정보는 여기로 불러주시면 됩니다.</p>
         </div>
         <div class="col-12">
-            <p>instagram</p>
+            <p><i class="fa-brands fa-instagram"></i>instagram 정보는 여기로 불러주시면 됩니다.</p>
         </div>
         <div class="col-12">
-            <p>한 줄 소개</p>
+            <p><i class="fa-sharp fa-solid fa-pen-to-square"></i>한 줄 소개 정보는 여기로 불러주시면 됩니다.</p>
         </div>
     </div>  <!-- 본인 프로필 영역 끝 -->
     <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
@@ -158,7 +162,27 @@
                 </div>
                 <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
                 <div class="col-12 userCommentArea" style="border:1px solid black">
-                    방명록
+                    <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                    </p>
                 </div>
             </div>
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
@@ -176,7 +200,27 @@
                 </div>
                 <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
                 <div class="col-12 userCommentArea" style="border:1px solid black">
-                    방명록
+                    <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                    </p>
                 </div>
             </div>
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
@@ -194,7 +238,27 @@
                 </div>
                 <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
                 <div class="col-12 userCommentArea" style="border:1px solid black">
-                    방명록
+                    <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                    </p>
                 </div>
             </div>
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
