detail.html css edit

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -148,8 +148,8 @@
     </div>  <!-- 본인 프로필 영역 끝 -->
     <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
     <div class="row main4"> <!-- 방명록 영역 시작 -->
-        <div class="col-12"> <!-- 여기서부터 방명록 코드 반복시작-->
-            <div class="row">
+        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"> <!-- 여기서부터 방명록 코드 반복시작-->
+            <div class="row" style="margin-top: 10px;">
                 <div class="col-12" style="border: 1px solid black; width: 95%; margin:0 auto">
                     <div class="row" >
                         <div class="col-2 userImgArea">
@@ -186,8 +186,8 @@
                 </div>
             </div>
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12"><!-- 여기서부터 방명록 코드 반복시작-->
-            <div class="row">
+        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
+            <div class="row" style="margin-top: 10px;">
                 <div class="col-12" style="border: 1px solid black; width: 95%; margin:0 auto">
                     <div class="row" >
                         <div class="col-2 userImgArea">
@@ -224,8 +224,8 @@
                 </div>
             </div>
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12"><!-- 여기서부터 방명록 코드 반복시작-->
-            <div class="row">
+        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
+            <div class="row" style="margin-top: 10px;">
                 <div class="col-12" style="border: 1px solid black; width: 95%; margin:0 auto">
                     <div class="row" >
                         <div class="col-2 userImgArea">
