index 프로필 등록하기 버튼에 링크 연결 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
         </button>
       </div>
       <div id="signoutButton">
-        <button type="button" class="btn btn-primary" id="profile-register-button">
+        <button type="button" class="btn btn-primary" id="profile-register-button" onClick="location.href='profile'">
           프로필 등록하기
         </button>
         <button type="button" class="btn btn-primary" id="sign-out-button" onclick="logOutHandler()">
