다음에 등록하기 버튼 활성화

--- a/templates/register.html
+++ b/templates/register.html
@@ -172,7 +172,7 @@
             </div>
             <div class="col-12">
               <button onclick="save_profile()" type="submit" class="btn btn-primary">등록</button>
-              <button onclick="" type="button" class="btn btn-primary">다음에 등록</button>
+              <button onclick="location.href='/'" type="button" class="btn btn-primary">다음에 등록</button>
             </div>
           </form>
         </div>
