--- a/templates/detail.html
+++ b/templates/detail.html
@@ -76,6 +76,7 @@
         }
         .userImgArea{   /* 방명록 작성자 이미지영역 관련 css */
             border: 1px solid black;
+            background-color: white;
             width: 50px;
             height: 50px;
             border-radius: 50%;
@@ -90,10 +91,13 @@
         .userNameArea{  /* 방명록 작성자 이름영역 관련 css */
             width: 95%;
             margin: 0 auto;
+            font-size: 30px;
         }
         .userCommentArea{   /* 방명록 작성자 방명록영역 관련 css */
             width: 95%;
             margin: 0 auto;
+            max-height: 150px;
+            overflow: scroll;
         }
     </style>
 </head>
