register.html 간단한 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         console.log(response)
         response['result'] == "fail" ?
         $('#signButton').css('display', 'block')
-          : $('#signoutButton').css('display', 'block') // 왜 순서를 바꾸면 안 되죠..?
+          : $('#signoutButton').css('display', 'block')
       });
 
     });
