--- a/templates/signin.html
+++ b/templates/signin.html
@@ -76,7 +76,7 @@
               window.location.href = "/";
             } else {
               // 로그인이 안되면 에러메시지를 띄웁니다.
-              alert(response["msg"]);
+              alert(response['msg']);
               window.location.href = "/signin";
             }
           },
