--- a/templates/signin.html
+++ b/templates/signin.html
@@ -74,44 +74,46 @@
               $.cookie("mytoken", response["token"]);
 
               // alert("로그인 완료!");
-              Swal.fire(
-                '로그인 완료!',
-                'You clicked the button!',
-                'success'
-              )
+              Swal.fire("로그인 완료!", "You clicked the button!", "success");
               Swal.fire({
-                icon: 'success',
-                title: '로그인 성공',
-                text: '로그인 성공',
-                confirmButtonText: '확인',
-              }).then(result => {
-                if(result.isConfirmed){
-                window.location.href = "/";
+                icon: "success",
+                title: "로그인 성공",
+                text: "로그인 성공",
+                confirmButtonText: "확인",
+              }).then((result) => {
+                if (result.isConfirmed) {
+                  window.location.href = "/";
                 }
-              })
+              });
               // window.location.href = "/";
             } else {
               // 로그인이 안되면 에러메시지를 띄웁니다.
               Swal.fire({
-                icon: 'error',
-                title: 'Oops...',
+                icon: "error",
+                title: "Oops...",
                 text: response["msg"],
-                confirmButtonText: '확인',
-              }).then(result => {
-                if(result.isConfirmed){
-                window.location.href = "/signin";
+                confirmButtonText: "확인",
+              }).then((result) => {
+                if (result.isConfirmed) {
+                  window.location.href = "/signin";
                 }
-              })
+              });
               // alert(response["msg"]);
-              
             }
           },
         });
+      }
+      //로그인 후 메인 페이지에서 다시 로그인 화면으로 못가게하기.
+      window.history.forward();
+      function noBack() {
+        window.history.forward();
       }
     </script>
   </head>
 
   <body>
+    <!--로그인 후 메인 페이지에서 다시 로그인 화면으로 못가게하기.--> 
+    <body onload="noBack();" onpageshow="if(event.persisted) noBack();" onunload="">
     <div class="main">
       <div class="mainLogo"></div>
       <div class="inputId">
@@ -122,7 +124,7 @@
               type="text"
               class="form-control"
               id="userid"
-              placeholder="영문, 숫자 5-11자"
+              placeholder="아이디를 입력해주세요."
             />
           </div>
         </div>
@@ -135,7 +137,7 @@
               type="password"
               class="form-control"
               id="userpw"
-              placeholder="숫자, 영문, 특수문자 조합 최소 8자"
+              placeholder="비밀번호를 입력해주세요."
               style="margin-bottom: 10px"
             />
           </div>
